Removed bootstrap as a gemfile dependency
Instead, rails_admin.css is now just a cached compiled css file

--- a/app/assets/stylesheets/rails_admin/rails_admin.scss.erb
+++ b/app/assets/stylesheets/rails_admin/rails_admin.scss.erb
@@ -1,4 +1,5 @@
-@charset "UTF-8";
+@import "rails_admin_cached"
+<!-- @charset "UTF-8";
 
 <%
   theme = ENV['RAILS_ADMIN_THEME'] || :default
@@ -72,3 +73,4 @@
 
 
 
+ -->
