Add support for font-awesome version 4

--- a/app/assets/stylesheets/rails_admin/rails_admin.scss.erb
+++ b/app/assets/stylesheets/rails_admin/rails_admin.scss.erb
@@ -32,6 +32,7 @@
 /*** Font-awesome ***/
 
 @import 'font-awesome';
+@import 'rails_admin/base/font-awesome-4-compatibility';
 
 /***  Bootstrap Theming  ***/
 
