--- a/app/views/rails_admin/main/_dashboard_history.html.haml
+++ b/app/views/rails_admin/main/_dashboard_history.html.haml
@@ -12,7 +12,7 @@
         - if o = abstract_model.try(:get, t.item)
           - label = o.send(abstract_model.config.object_label_method)
           - if show_action = action(:show, abstract_model, o)
-            %td= link_to(label, url_for(:action => show_action.action_name, :model_name => abstract_model.to_param, :id => o.id), :class => 'pjax')
+            %td= link_to(label, url_for(action: show_action.action_name, model_name: abstract_model.to_param, id: o.id), class: 'pjax')
           - else
             %td= label
         - else
