--- a/app/views/rails_admin/main/_delete_notice.html.haml
+++ b/app/views/rails_admin/main/_delete_notice.html.haml
@@ -1,10 +1,10 @@
 - object = delete_notice
 
-%li{:style => 'display:block; margin-top:10px'}
+%li{style: 'display:block; margin-top:10px'}
   %span.label= @abstract_model.pretty_name
   - wording = object.send(@model_config.object_label_method)
   - if show_action = action(:show, @abstract_model, object)
-    = link_to(wording, url_for(:action => show_action.action_name, :model_name => @abstract_model.to_param, :id => object.id), :class => 'pjax')
+    = link_to(wording, url_for(action: show_action.action_name, model_name: @abstract_model.to_param, id: object.id), class: 'pjax')
   - else
     = wording
   %ul
@@ -14,6 +14,6 @@
         = @abstract_model.model.human_attribute_name association[:name]
         - wording = child.send(child_config.object_label_method)
         - if child.id && (show_action = action(:show, child_config.abstract_model, child))
-          = link_to(wording, url_for(:action => show_action.action_name, :model_name => child_config.abstract_model.to_param, :id => child.id), :class => 'pjax')
+          = link_to(wording, url_for(action: show_action.action_name, model_name: child_config.abstract_model.to_param, id: child.id), class: 'pjax')
         - else
           = wording
