--- a/app/views/rails_admin/main/dashboard.html.haml
+++ b/app/views/rails_admin/main/dashboard.html.haml
@@ -9,13 +9,13 @@
     %tbody
       - @abstract_models.each do |abstract_model|
         - if authorized? :index, abstract_model
-          - index_path = index_path(:model_name => abstract_model.to_param)
+          - index_path = index_path(model_name: abstract_model.to_param)
           - row_class = "#{cycle("odd", "even")}#{" link" if index_path} #{abstract_model.param_key}_links"
-          %tr{:class => row_class, :"data-link" => index_path}
+          %tr{class: row_class, :"data-link" => index_path}
             - last_used = @most_recent_changes[abstract_model.pretty_name]
             - active = last_used.try(:today?)
             %td
-              %span.show= link_to abstract_model.config.label_plural, index_path, :class => 'pjax'
+              %span.show= link_to abstract_model.config.label_plural, index_path, class: 'pjax'
             %td
               - if last_used
                 = time_ago_in_words last_used
@@ -23,8 +23,8 @@
             %td
               - count = @count[abstract_model.pretty_name]
               - percent = count > 0 ? (@max <= 1 ? count : ((Math.log(count+1) * 100.0) / Math.log(@max+1)).to_i) : -1
-              .progress{:style => "margin-bottom:0px", :class => "progress-#{get_indicator(percent)} #{active && 'active progress-striped'}"  }
-                .bar.animate-width-to{:'data-animate-length' => ([1.0, percent].max.to_i * 20), :'data-animate-width-to' => "#{[2.0, percent].max.to_i}%", :style => "width:2%"}
+              .progress{style: "margin-bottom:0px", class: "progress-#{get_indicator(percent)} #{active && 'active progress-striped'}"  }
+                .bar.animate-width-to{:'data-animate-length' => ([1.0, percent].max.to_i * 20), :'data-animate-width-to' => "#{[2.0, percent].max.to_i}%", style: "width:2%"}
                   = @count[abstract_model.pretty_name]
             %td.links
               %ul.inline= menu_for :collection, abstract_model, nil, true
@@ -32,4 +32,4 @@
   #block-tables.block
     .content
       %h2= t("admin.actions.history_index.menu")
-      = render :partial => 'rails_admin/main/dashboard_history'
+      = render partial: 'rails_admin/main/dashboard_history'
