--- a/app/views/rails_admin/main/_delete_notice.html.haml
+++ b/app/views/rails_admin/main/_delete_notice.html.haml
@@ -11,7 +11,7 @@
     - @abstract_model.each_associated_children(object) do |association, child|
       %li
         - child_config = RailsAdmin.config(child)
-        = @abstract_model.model.human_attribute_name association[:name]
+        = @abstract_model.model.human_attribute_name association.name
         - wording = child.send(child_config.object_label_method)
         - if child.id && (show_action = action(:show, child_config.abstract_model, child))
           = link_to(wording, url_for(action: show_action.action_name, model_name: child_config.abstract_model.to_param, id: child.id), class: 'pjax')
