--- a/app/assets/stylesheets/rails_admin/rails_admin.scss.erb
+++ b/app/assets/stylesheets/rails_admin/rails_admin.scss.erb
@@ -1,3 +1,32 @@
+// Issue 1956 (https://github.com/sferik/rails_admin/issues/1956)
+//= depend_on_asset "rails_admin/bootstrap/glyphicons-halflings.png"
+//= depend_on_asset "rails_admin/bootstrap/glyphicons-halflings-white.png"
+//= depend_on_asset "rails_admin/aristo/images/bg_fallback.png"
+//= depend_on_asset "rails_admin/aristo/images/ui-icons_222222_256x240.png"
+//= depend_on_asset "rails_admin/aristo/images/ui-icons_454545_256x240.png"
+//= depend_on_asset "rails_admin/aristo/images/icon_sprite.png"
+//= depend_on_asset "rails_admin/aristo/images/slider_handles.png"
+//= depend_on_asset "rails_admin/aristo/images/progress_bar.gif"
+//= depend_on_asset "rails_admin/multiselect/icon_sprite.png"
+//= depend_on_asset "rails_admin/multiselect/ui-icon-circle-triangle-n-light.png"
+//= depend_on_asset "rails_admin/multiselect/ui-icon-circle-triangle-n-dark.png"
+//= depend_on_asset "rails_admin/multiselect/ui-icon-circle-triangle-s-light.png"
+//= depend_on_asset "rails_admin/multiselect/ui-icon-circle-triangle-s-dark.png"
+//= depend_on_asset "rails_admin/colorpicker/select2.png"
+//= depend_on_asset "rails_admin/colorpicker/custom_background.png"
+//= depend_on_asset "rails_admin/colorpicker/colorpicker_overlay.png"
+//= depend_on_asset "rails_admin/colorpicker/colorpicker_select.gif"
+//= depend_on_asset "rails_admin/colorpicker/custom_indic.gif"
+//= depend_on_asset "rails_admin/colorpicker/custom_hex.png"
+//= depend_on_asset "rails_admin/colorpicker/custom_rgb_r.png"
+//= depend_on_asset "rails_admin/colorpicker/custom_rgb_g.png"
+//= depend_on_asset "rails_admin/colorpicker/custom_rgb_b.png"
+//= depend_on_asset "rails_admin/colorpicker/custom_hsb_h.png"
+//= depend_on_asset "rails_admin/colorpicker/custom_hsb_s.png"
+//= depend_on_asset "rails_admin/colorpicker/custom_hsb_b.png"
+//= depend_on_asset "rails_admin/colorpicker/custom_submit.png"
+
+
 @charset "UTF-8";
 
 <%
