--- a/app/views/kaminari/twitter-bootstrap/_page.html.haml
+++ b/app/views/kaminari/twitter-bootstrap/_page.html.haml
@@ -1,4 +1,4 @@
 - if page.current?
-  %li.active= link_to page, url, class: (remote ? 'pjax' : '')
+  %li.active= link_to page, url
 - else
-  %li= link_to page, url, class: (remote ? 'pjax' : '')
+  %li= link_to page, url
