--- a/app/views/layouts/rails_admin/application.html.haml
+++ b/app/views/layouts/rails_admin/application.html.haml
@@ -14,7 +14,7 @@
     .navbar.navbar-fixed-top
       .navbar-inner
         .container-fluid
-          %a.brand.pjax{href: dashboard_path}
+          %a.brand{href: dashboard_path}
             = _get_plugin_name[0] || 'Rails'
             %small= _get_plugin_name[1] || 'Admin'
           .nav-collapse
@@ -27,4 +27,4 @@
             %ul.nav.nav-list= static_navigation
         .span9
           .row-fluid
-            .content{:'data-pjax-container' => true}= render template: 'layouts/rails_admin/pjax'
+            .content= render template: 'layouts/rails_admin/pjax'
