--- a/app/views/rails_admin/main/_delete_notice.html.haml
+++ b/app/views/rails_admin/main/_delete_notice.html.haml
@@ -4,7 +4,7 @@
   %span.label= @abstract_model.pretty_name
   - wording = object.send(@model_config.object_label_method)
   - if show_action = action(:show, @abstract_model, object)
-    = link_to(wording, url_for(action: show_action.action_name, model_name: @abstract_model.to_param, id: object.id), class: 'pjax')
+    = link_to(wording, url_for(action: show_action.action_name, model_name: @abstract_model.to_param, id: object.id))
   - else
     = wording
   %ul
@@ -14,6 +14,6 @@
         = @abstract_model.model.human_attribute_name association.name
         - wording = child.send(child_config.object_label_method)
         - if child.id && (show_action = action(:show, child_config.abstract_model, child))
-          = link_to(wording, url_for(action: show_action.action_name, model_name: child_config.abstract_model.to_param, id: child.id), class: 'pjax')
+          = link_to(wording, url_for(action: show_action.action_name, model_name: child_config.abstract_model.to_param, id: child.id))
         - else
           = wording
