--- a/app/assets/stylesheets/rails_admin/bootstrap/_button-groups.scss
+++ b/app/assets/stylesheets/rails_admin/bootstrap/_button-groups.scss
@@ -9,7 +9,7 @@
   display: inline-block;
   @include ie7-inline-block();
   font-size: 0; // remove as part 1 of font-size inline-block hack
-  vertical-align: middle; // match .btn alignment given font-size hack above
+  vertical-align: middle; // match .button alignment given font-size hack above
   white-space: nowrap; // prevent buttons from wrapping when in tight spaces (e.g., the table on the tests page)
   @include ie7-restore-left-whitespace();
 }
@@ -24,22 +24,22 @@
   font-size: 0; // Hack to remove whitespace that results from using inline-block
   margin-top: $baseLineHeight / 2;
   margin-bottom: $baseLineHeight / 2;
-  > .btn + .btn,
-  > .btn-group + .btn,
-  > .btn + .btn-group {
+  > .button + .button,
+  > .btn-group + .button,
+  > .button + .btn-group {
     margin-left: 5px;
   }
 }
 
 // Float them, remove border radius, then re-add to first and last elements
-.btn-group > .btn {
+.btn-group > .button {
   position: relative;
   @include border-radius(0);
 }
-.btn-group > .btn + .btn {
+.btn-group > .button + .button {
   margin-left: -1px;
 }
-.btn-group > .btn,
+.btn-group > .button,
 .btn-group > .dropdown-menu,
 .btn-group > .popover {
   font-size: $baseFontSize; // redeclare as part 2 of font-size inline-block hack
@@ -57,34 +57,34 @@
 }
 
 // Set corners individual because sometimes a single button can be in a .btn-group and we need :first-child and :last-child to both match
-.btn-group > .btn:first-child {
+.btn-group > .button:first-child {
   margin-left: 0;
   @include border-top-left-radius($baseBorderRadius);
   @include border-bottom-left-radius($baseBorderRadius);
 }
 // Need .dropdown-toggle since :last-child doesn't apply given a .dropdown-menu immediately after it
-.btn-group > .btn:last-child,
+.btn-group > .button:last-child,
 .btn-group > .dropdown-toggle {
   @include border-top-right-radius($baseBorderRadius);
   @include border-bottom-right-radius($baseBorderRadius);
 }
 // Reset corners for large buttons
-.btn-group > .btn.large:first-child {
+.btn-group > .button.large:first-child {
   margin-left: 0;
   @include border-top-left-radius($borderRadiusLarge);
   @include border-bottom-left-radius($borderRadiusLarge);
 }
-.btn-group > .btn.large:last-child,
+.btn-group > .button.large:last-child,
 .btn-group > .large.dropdown-toggle {
   @include border-top-right-radius($borderRadiusLarge);
   @include border-bottom-right-radius($borderRadiusLarge);
 }
 
 // On hover/focus/active, bring the proper btn to front
-.btn-group > .btn:hover,
-.btn-group > .btn:focus,
-.btn-group > .btn:active,
-.btn-group > .btn.active {
+.btn-group > .button:hover,
+.btn-group > .button:focus,
+.btn-group > .button:active,
+.btn-group > .button.active {
   z-index: 2;
 }
 
@@ -100,7 +100,7 @@
 // ----------------------
 
 // Give the line between buttons some depth
-.btn-group > .btn + .dropdown-toggle {
+.btn-group > .button + .dropdown-toggle {
   padding-left: 8px;
   padding-right: 8px;
   @include box-shadow(inset 1px 0 0 rgba(255,255,255,.125), inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05));
@@ -134,7 +134,7 @@
   }
 
   // Keep the hover's background when dropdown is open
-  .btn.dropdown-toggle {
+  .button.dropdown-toggle {
     background-color: $btnBackgroundHighlight;
   }
   .btn-primary.dropdown-toggle {
@@ -159,7 +159,7 @@
 
 
 // Reposition the caret
-.btn .caret {
+.button .caret {
   margin-top: 8px;
   margin-left: 0;
 }
@@ -205,20 +205,20 @@
   display: inline-block; // makes buttons only take up the width they need
   @include ie7-inline-block();
 }
-.btn-group-vertical > .btn {
+.btn-group-vertical > .button {
   display: block;
   float: none;
   max-width: 100%;
   @include border-radius(0);
 }
-.btn-group-vertical > .btn + .btn {
+.btn-group-vertical > .button + .button {
   margin-left: 0;
   margin-top: -1px;
 }
-.btn-group-vertical > .btn:first-child {
+.btn-group-vertical > .button:first-child {
   @include border-radius($baseBorderRadius $baseBorderRadius 0 0);
 }
-.btn-group-vertical > .btn:last-child {
+.btn-group-vertical > .button:last-child {
   @include border-radius(0 0 $baseBorderRadius $baseBorderRadius);
 }
 .btn-group-vertical > .btn-large:first-child {
