--- a/app/assets/stylesheets/rails_admin/bootstrap/_navbar.scss
+++ b/app/assets/stylesheets/rails_admin/bootstrap/_navbar.scss
@@ -91,13 +91,13 @@
 
 // Buttons in navbar
 // -------------------------
-.navbar .btn,
+.navbar .button,
 .navbar .btn-group {
   @include navbarVerticalAlign(30px); // Vertically center in navbar
 }
-.navbar .btn-group .btn,
-.navbar .input-prepend .btn,
-.navbar .input-append .btn,
+.navbar .btn-group .button,
+.navbar .input-prepend .button,
+.navbar .input-append .button,
 .navbar .input-prepend .btn-group,
 .navbar .input-append .btn-group {
   margin-top: 0; // then undo the margin here so we don't accidentally double it
@@ -116,7 +116,7 @@
   }
   input,
   select,
-  .btn {
+  .button {
     display: inline-block;
     margin-bottom: 0;
   }
@@ -270,7 +270,7 @@
 }
 
 // Navbar button for toggling navbar items in responsive layouts
-// These definitions need to come after '.navbar .btn'
+// These definitions need to come after '.navbar .button'
 .navbar .btn-navbar {
   display: none;
   float: right;
