--- a/app/assets/stylesheets/rails_admin/themes/cerulean/theming.scss
+++ b/app/assets/stylesheets/rails_admin/themes/cerulean/theming.scss
@@ -54,7 +54,7 @@
 // BUTTONS
 // -----------------------------------------------------
 
-.btn {
+.button {
   @include gradient-vertical-three-colors($white, $white, 0.05, darken($white, 0%));
   $shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
   @include box-shadow($shadow);
