--- a/app/views/rails_admin/main/_form_nested_one.html.haml
+++ b/app/views/rails_admin/main/_form_nested_one.html.haml
@@ -1,7 +1,7 @@
 .controls{data: { nestedone: true }}
   %ul.nav{style: 'margin-bottom:0px; display:none'}
   .btn-group
-    %a.btn.btn-info.toggler{:'data-toggle' => "button", :'data-target' => "#{form.jquery_namespace(field)} > .tab-content", class: (field.active? ? 'active' : '') }
+    %a.button.btn-info.toggler{:'data-toggle' => "button", :'data-target' => "#{form.jquery_namespace(field)} > .tab-content", class: (field.active? ? 'active' : '') }
       %i.icon-white
     - unless field.nested_form[:update_only] || !field.inline_add
       = form.link_to_add "<i class=\"icon-plus icon-white\"></i> #{wording_for(:link, :new, field.associated_model_config.abstract_model)}".html_safe,
