add foundation_rails to dummy_app

--- a/spec/dummy_app/app/assets/stylesheets/application.css
+++ b/spec/dummy_app/app/assets/stylesheets/application.css
@@ -9,5 +9,7 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
+ *= require foundation_and_overrides
+
  *= require_tree .
 */
