Convert dashboard to foundation

--- a/app/assets/stylesheets/rails_admin/rails_admin.css.sass
+++ b/app/assets/stylesheets/rails_admin/rails_admin.css.sass
@@ -1,1 +1,12 @@
 @import foundation
+@import font-awesome
+
+.nav-header
+  list-style: none
+  font-weight: bold
+
+.inline
+  margin: 0
+
+  li
+    display: inline
