--- a/app/views/layouts/rails_admin/application.html.haml
+++ b/app/views/layouts/rails_admin/application.html.haml
@@ -19,21 +19,10 @@
               = _get_plugin_name[0] || 'Rails'
               %small= _get_plugin_name[1] || 'Admin'
       %section.top-bar-section{style: 'float: right; margin-right: 3em;'}
-        %ul.right
-          - actions(:root).each do |action|
-            %li{class: "#{action.action_name}_root_link"}= link_to wording_for(:menu, action), { action: action.action_name, controller: 'rails_admin/main' }
-          - if main_app_root_path = (main_app.root_path rescue false)
-            %li= link_to t('admin.home.name').capitalize, main_app_root_path
-          - if _current_user
-            - if user_link = edit_user_link
-              %li= user_link
-            - if logout_path.present?
-              %li= link_to content_tag('span', t('admin.misc.log_out'), class: 'label label-important'), logout_path, method: Devise.sign_out_via
-            - if _current_user.respond_to?(:email) && _current_user.email.present?
-              %li= image_tag "#{(request.ssl? ? 'https://secure' : 'http://www')}.gravatar.com/avatar/#{Digest::MD5.hexdigest _current_user.email}?s=30", style: 'padding-top:5px'
+        = render 'layouts/rails_admin/secondary_navigation'
     .row
       .small-9.push-3.columns
         .content= render template: 'layouts/rails_admin/pjax'
       .small-3.pull-9.columns
-        %ul.nav.nav-list= main_navigation
-        %ul.nav.nav-list= static_navigation
+        %ul.side-nav= main_navigation
+        %ul.side-nav= static_navigation
