Stretch data tables to 100% width

--- a/app/views/rails_admin/main/dashboard.html.haml
+++ b/app/views/rails_admin/main/dashboard.html.haml
@@ -1,5 +1,5 @@
 - if @abstract_models
-  %table.table.table-condensed.table-striped
+  %table.table.table-striped
     %thead
       %tr
         %th.shrink.model-name= t "admin.table_headers.model_name"
