[#74753598] Removed data-tab declaration for action tabs in every model in order for it to work

--- a/app/views/layouts/rails_admin/pjax.html.haml
+++ b/app/views/layouts/rails_admin/pjax.html.haml
@@ -10,7 +10,7 @@
     %a.close{href: '#', :'data-dismiss' => "alert"}×
     = value
 = breadcrumb
-%ul.tabs{data: {tab: ''}}
+%ul.tabs
   = menu_for((@abstract_model ? (@object.try(:persisted?) ? :member : :collection) : :root), @abstract_model, @object)
   = content_for :contextual_tabs
 = yield
