--- a/app/views/rails_admin/main/_submit_buttons.html.haml
+++ b/app/views/rails_admin/main/_submit_buttons.html.haml
@@ -1,15 +1,15 @@
 %input{type: :hidden, name: 'return_to', value: (params[:return_to].presence || request.referer)}
 .form-actions
-  %button.button.btn-primary{type: "submit", name: "_save", :'data-disable-with' => t("admin.form.save")}
+  %button.button.radius.small{type: "submit", name: "_save", :'data-disable-with' => t("admin.form.save")}
     %i.icon-white.icon-ok
     = t("admin.form.save")
   %span.extra_buttons
     - if authorized? :new, @abstract_model
-      %button.button.btn-info{type: "submit", name: "_add_another", :'data-disable-with' => t("admin.form.save_and_add_another")}
+      %button.button.radius.small{type: "submit", name: "_add_another", :'data-disable-with' => t("admin.form.save_and_add_another")}
         = t("admin.form.save_and_add_another")
     - if authorized? :edit, @abstract_model
-      %button.button.btn-info{type: "submit", name: "_add_edit", :'data-disable-with' => t("admin.form.save_and_edit")}
+      %button.button.radius.small{type: "submit", name: "_add_edit", :'data-disable-with' => t("admin.form.save_and_edit")}
         = t("admin.form.save_and_edit")
-    %button.button{type: "submit", name: "_continue", :'data-disable-with' => t("admin.form.cancel")}
+    %button.button.gray.radius.small{type: "submit", name: "_continue", :'data-disable-with' => t("admin.form.cancel")}
       %i.icon-remove
       = t("admin.form.cancel")
