--- a/app/views/rails_admin/main/delete.html.haml
+++ b/app/views/rails_admin/main/delete.html.haml
@@ -10,9 +10,9 @@
 = form_for(@object, url: delete_path(model_name: @abstract_model.to_param, id: @object.id), html: {method: "delete"}) do
   %input{type: :hidden, name: 'return_to', value: (params[:return_to].presence || request.referer)}
   .form-actions
-    %button.button.btn-danger{type: "submit", :'data-disable-with' => t("admin.form.confirmation")}
+    %button.button.small.radius.alert{type: "submit", :'data-disable-with' => t("admin.form.confirmation")}
       %i.icon-white.icon-ok
       = t("admin.form.confirmation")
-    %button.button{type: "submit", name: "_continue", :'data-disable-with' => t("admin.form.cancel")}
+    %button.button.small.radius.gray{type: "submit", name: "_continue", :'data-disable-with' => t("admin.form.cancel")}
       %i.icon-remove
       = t("admin.form.cancel")
