--- a/app/views/rails_admin/main/show.html.haml
+++ b/app/views/rails_admin/main/show.html.haml
@@ -10,7 +10,7 @@
           - fields.each_with_index do |field, index|
             - unless values[index].nil? && RailsAdmin::config.compact_show_view
               %dt
-                %span.label.label-info{class: "#{field.type_css_class} #{field.css_class}"}
+                %span.label.round{class: "#{field.type_css_class} #{field.css_class}"}
                   = field.label
               %dd.well
                 = field.pretty_value
